# stockrock

./: .env.example  .gitignore  AGENT.md  AGENTS.md  BOOTSTRAP.md  PLUGIN.md  README.md  TOOLS.md  openclaw.plugin.json  pyproject.toml
plugins/stockrock/: __init__.py  openclaw.plugin.json  plugin.yaml
plugins/stockrock/skills/stockrock/: SKILL.md
skills/stockrock/: SKILL.md
stockrock/: __init__.py  config.py
stockrock/api/: main.py  routes.py  watchlist_routes.py
stockrock/data/: __init__.py  akshare_provider.py  base.py  cache.py  cached_provider.py  capital.py  tushare_provider.py
stockrock/engine/: __init__.py  board.py  codelike.py  screener.py  universe.py
stockrock/indicators/: __init__.py  cyq.py  tdx.py
stockrock/strategies/: __init__.py  base.py  example_ma_cross.py  four_line_rise.py  limit_up_relay.py  low_sideways_build.py  mizhuang_qinniu.py  mizhuang_rebound.py  params.py  qianfu_niugu.py  soul_hook.py  uptrend_chips.py  zhuangjia_taijiao.py
stockrock/watchlist/: __init__.py  quotes.py  session.py  store.py
tests/: test_board.py  test_cache_incremental.py  test_four_line_rise.py  test_limit_up_relay.py  test_low_sideways_build.py  test_mizhuang_qinniu.py  test_mizhuang_rebound.py  test_qianfu_niugu.py  test_soul_hook.py  test_strategy_params.py  test_tdx.py  test_uptrend_chips.py  test_watchlist.py  test_watchlist_api.py  test_watchlist_initial.py  test_watchlist_quotes.py  test_zhuangjia_taijiao.py
web/: index.html  package-lock.json  package.json
web/src/: App.vue  Watchlist.vue  style.css
