[project]
name = "stockrock"
version = "0.1.0"
description = "A-share stock screener with Tongdaxin-style indicators"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pandas>=2.2.0",
    "numpy>=2.0.0",
    "akshare>=1.14.0",
    "python-dotenv>=1.0.0",
    "pyarrow>=18.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]
tushare = [
    "tushare>=1.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["stockrock"]

[project.scripts]
stockrock = "stockrock.api.main:run"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
